Added static airports data for report page and fixed the flenching issue in the gantt station manager page and user collumn naming issue